--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,6 +6,7 @@
 
 @import "components/components";
 @import "components/buttons";
+@import "components/hamburgers";
 
 @import "layouts/header";
 @import "layouts/footer";
