--- a/src/scss/base/_normalize.scss
+++ b/src/scss/base/_normalize.scss
@@ -1,6 +1,8 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
+  width: 100%;
+  height: 100%;
 }
 
 *,
@@ -10,7 +12,9 @@ html {
 }
 
 body {
-  background-color: white;
+  background-color: $primary;
+  color: $secondary;
+  text-align: center;
 }
 
 body,
@@ -22,7 +26,8 @@ h5,
 h6,
 p,
 ol,
-ul {
+ul,
+figure {
   margin: 0;
   padding: 0;
   font-weight: normal;
@@ -34,10 +39,17 @@ ul {
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
 a {
   text-decoration: none;
+  color: $tertiary;
+}
+
+button,
+input,
+textarea {
+  font-size: inherit;
 }
