--- a/src/scss/base/_type.scss
+++ b/src/scss/base/_type.scss
@@ -12,6 +12,7 @@ html {
 
 body {
   line-height: 1.4;
+  letter-spacing: 0.75px;
 }
 
 h1,
@@ -55,4 +56,8 @@ h5, .h5 {
 h6, .h6 {
   font-size: $mod_1 *1rem;
   @include fluid-type($min_width, $max_width, $mod_1*$mod_1 *$min_font, $mod_2 *$min_font);
+}
+
+.highlight {
+  color: $tertiary;
 }
