--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,5 +1,7 @@
 $primary: #241403;
 $secondary: #fff2d9;
+$secondary-dark: darken($secondary, 10%);
 $tertiary: #a90d0d;
+$tertiary-dark: darken($tertiary, 10%);
 $black: #000;
 $white: #fff;
