--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -26,7 +26,7 @@
         > ul#nav {
           border-top: 5px solid $tertiary;
           position: absolute;
-          bottom: -100%;
+          top: 100%;
           left: 0;
           right: 0;
           margin-left: auto;
@@ -34,13 +34,20 @@
           display: flex;
           flex-direction: column;
           align-items: center;
-          height: 100%;
+          height: min-content;
+          min-height: 100%;
           padding: 1em 0;
           background-color: $primary;
-          z-index: 5;
+          z-index: 10000;
           opacity: 0;
           pointer-events: none;
           transition: all 0.65s ease;
+
+          &::after {
+            content: '';
+            display: block;
+            clear: both;
+          }
 
           &.expanded {
             opacity: 1;
