--- a/src/scss/base/_normalize.scss
+++ b/src/scss/base/_normalize.scss
@@ -27,7 +27,8 @@ h6,
 p,
 ol,
 ul,
-figure {
+figure,
+blockquote {
   margin: 0;
   padding: 0;
   font-weight: normal;
@@ -45,7 +46,11 @@ img {
 
 a {
   text-decoration: none;
-  color: $tertiary;
+  color: $secondary;
+
+  &:hover {
+    color: $tertiary;
+  }
 }
 
 button,
