--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -6,6 +6,7 @@
 
   &:hover {
     background-color: $tertiary-dark;
+    color: $secondary;
   }
 }
 
@@ -14,7 +15,6 @@
   position: relative;
 
   &:hover {
-    color: $tertiary;
     background-color: transparent;
 
     svg {
