--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -25,6 +25,7 @@
 
         > ul#nav {
           border-top: 5px solid $tertiary;
+          border-bottom: 5px solid $tertiary;
           position: absolute;
           top: 100%;
           left: 0;
@@ -42,6 +43,7 @@
           opacity: 0;
           pointer-events: none;
           transition: all 0.65s ease;
+
 
           &::after {
             content: '';
