--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -8,11 +8,10 @@
 
     p {
       margin-top: 1em;
-
     }
 
     .slide-outer {
-
+      
     }
 
     .btn-wrap {
@@ -20,3 +19,141 @@
     }
   }
 }
+
+.testimonials {
+  
+  .container {
+
+    h2 {
+
+    }
+
+    blockquote {
+      background-color: $secondary;
+      color: $primary;
+      padding: 2em;
+      padding-bottom: 1em;
+      border-radius: 5px;
+      position: relative;
+      max-width: 280px;
+      margin-top: 2em;
+      margin-left: auto;
+      margin-right: auto;
+
+      @media (min-width: 600px) {
+        max-width: 350px;
+      }
+
+      p {
+
+        @media (min-width: 600px) {
+          margin-right: -1.2em;
+        }
+
+        &::before {
+          font-family: Georgia, serif;
+          position: absolute;
+          font-size: 3.7em;
+          line-height: 1;
+          top: 0.3em;
+          left: 0.2em;
+          content: "\201C";
+          color: $primary;
+        }
+  
+        &::after {
+          font-family: Georgia, serif;
+          position: absolute;
+          font-size: 3.7em;
+          float: right;
+          line-height: 1;
+          right: 0.5em;
+          bottom: 0em;
+          content: "\201D";
+          color: $primary;
+  
+          @media (min-width: 600px) {
+            right: 0.8em;
+          }
+        }
+      }
+
+
+      cite {
+        display: block;
+        margin-top: 0.7em;
+        margin-right: 0.5em;
+
+        &::before {
+          content: '\2014';
+          margin-right: 0.5em;
+        }
+      }
+    }
+  }
+}
+
+.books {
+
+  .container {
+
+    article {
+
+      &:not(:last-of-type) {
+        margin-bottom: 6em;
+      }
+
+      figure {
+
+        img {
+          max-width: 200px;
+        }
+
+        figcaption {
+          display: none;
+        }
+      }
+
+      h4 {
+        margin: 1em 0;
+      }
+
+      p {
+        text-align: left;
+        margin: 0 auto;
+        line-height: 1.6;
+        max-width: 350px;
+      }
+
+      a.btn {
+        margin-top: 1.75em;
+      }
+    }
+  }
+}
+
+.cta {
+
+  .container {
+
+    h3 {
+
+    }
+
+    a {
+      margin: 2em 0;
+    }
+
+    figure {
+
+      img {
+        margin-top: 1em;
+      }
+
+      figcaption {
+        display: none;
+      }
+    }
+  }
+}
+
