--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,7 +4,7 @@
 @import "base/normalize";
 @import "base/type";
 
-@import "components/components";
+@import "components/slider";
 @import "components/buttons";
 @import "components/hamburgers";
 
