nav menu js update + create modal

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -10,6 +10,12 @@
   }
 }
 
+button.btn {
+  border: 0;
+  font-family: 'EB Garamond', serif;
+  cursor: pointer;
+}
+
 .btn-link {
   background-color: transparent;
   position: relative;
