--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -75,7 +75,7 @@
                 max-height: 0px;
               }
 
-              &:hover {
+              &.expanded {
 
                 a.wrap-svg {
                   color: $tertiary;
