--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,6 +7,7 @@
 @import "components/slider";
 @import "components/buttons";
 @import "components/hamburgers";
+@import "components/modal";
 
 @import "layouts/header";
 @import "layouts/footer";
