--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -11,7 +11,7 @@
     }
 
     .slide-outer {
-      
+
     }
 
     .btn-wrap {
@@ -28,37 +28,42 @@
 
     }
 
-    blockquote {
-      background-color: $secondary;
-      color: $primary;
-      padding: 2em;
-      padding-bottom: 1em;
-      border-radius: 5px;
-      position: relative;
-      max-width: 280px;
-      margin-top: 2em;
-      margin-left: auto;
-      margin-right: auto;
+    .wrap {
 
-      @media (min-width: 600px) {
-        max-width: 350px;
+      @media (min-width: 992px) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
       }
 
-      p {
-
-        @media (min-width: 600px) {
-          margin-right: -1.2em;
+      blockquote {
+        background-color: $secondary;
+        color: $primary;
+        padding: 2em;
+        padding-bottom: 1em;
+        border-radius: 5px;
+        position: relative;
+        margin-top: 2em;
+        max-width: 275px;
+        margin-left: auto;
+        margin-right: auto;
+  
+        @media (min-width: 500px) {
+          max-width: 350px;
         }
-
+  
         &::before {
           font-family: Georgia, serif;
           position: absolute;
           font-size: 3.7em;
           line-height: 1;
-          top: 0.3em;
+          top: 0.2em;
           left: 0.2em;
           content: "\201C";
-          color: $primary;
+  
+          @media (min-width: 992px) {
+            left: 0.5em;
+          }
         }
   
         &::after {
@@ -67,66 +72,126 @@
           font-size: 3.7em;
           float: right;
           line-height: 1;
-          right: 0.5em;
-          bottom: 0em;
+          right: 0.2em;
+          bottom: -0.2em;
           content: "\201D";
-          color: $primary;
   
-          @media (min-width: 600px) {
+          @media (min-width: 500px) {
+            right: 0.5em;
+          }
+  
+          @media (min-width: 992px) {
             right: 0.8em;
+            top: 1.8em;
           }
         }
-      }
-
-
-      cite {
-        display: block;
-        margin-top: 0.7em;
-        margin-right: 0.5em;
-
-        &::before {
-          content: '\2014';
+  
+        
+        p {
+          @media (min-width: 600px) {
+            margin-right: -10px;
+          }
+        }
+  
+        cite {
+          display: block;
+          margin-top: 0.7em;
           margin-right: 0.5em;
+  
+          &::before {
+            content: '\2014';
+            margin-right: 0.5em;
+          }
         }
       }
     }
   }
 }
 
-.books {
+.books-scroll {
 
   .container {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
 
-    article {
+    .scroll-wrap {
+      width: 100%;
+      position: relative;
 
-      &:not(:last-of-type) {
-        margin-bottom: 6em;
-      }
+      .sticky {
+        position: sticky;
+        top: 0;
+        height: 100vh;
+        width: 100%;
+        // overflow-x: hidden;
 
-      figure {
+        .scroll-stage {
+          position: absolute;
+          height: 100%;
+          will-change: transform;
+          overflow: hidden;
 
-        img {
-          max-width: 200px;
+          .cards {
+            position: relative;
+            height: 100%;
+            display: flex;
+            flex-flow: row nowrap;
+            justify-content: flex-start;
+            align-items: flex-start;
+            padding-left: 150px;
+
+            article {
+
+              @media (min-width: 992px) {
+                height: 100px;
+                width: 900px;
+                // margin-right: 75px;
+                flex-shrink: 0;
+                position: relative;
+              }
+
+              &:not(:last-of-type) {
+                margin-bottom: 6em;
+
+                @media (min-width: 992px) {
+                  margin-bottom: 0;
+                }
+              }
+
+              figure {
+
+                img {
+                  max-width: 250px;
+                }
+
+                figcaption {
+                  display: none;
+                }
+              }
+
+              h4 {
+                margin: 1em 0;
+              }
+
+              p {
+                text-align: left;
+                margin: 0 auto;
+                line-height: 1.6;
+                max-width: 350px;
+
+                @media (min-width: 992px) {
+                  max-width: 450px;
+                  text-align: center;
+                }
+              }
+
+              a.btn {
+                margin-top: 1.75em;
+              }
+            }
+          }
         }
-
-        figcaption {
-          display: none;
-        }
-      }
-
-      h4 {
-        margin: 1em 0;
-      }
-
-      p {
-        text-align: left;
-        margin: 0 auto;
-        line-height: 1.6;
-        max-width: 350px;
-      }
-
-      a.btn {
-        margin-top: 1.75em;
       }
     }
   }
@@ -154,6 +219,7 @@
         display: none;
       }
     }
+
   }
 }
 
