--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -111,35 +111,49 @@
 .books-scroll {
 
   .container {
-    position: relative;
-    width: 100%;
-    min-height: 100vh;
+    
+    @media (min-width: 992px) {
+      position: relative;
+      width: 100%;
+      min-height: 100vh;
+    }
 
     .scroll-wrap {
-      width: 100%;
-      position: relative;
+
+      @media (min-width: 992px) {
+        width: 100%;
+        position: relative;
+      }
 
       .sticky {
-        position: sticky;
-        top: 0;
-        height: 100vh;
-        width: 100%;
-        // overflow-x: hidden;
+
+        @media (min-width: 992px) {
+          position: sticky;
+          top: 0;
+          height: 100vh;
+          width: 100%;
+        }
 
         .scroll-stage {
-          position: absolute;
-          height: 100%;
-          will-change: transform;
-          overflow: hidden;
+        
+          @media (min-width: 992px) {
+            position: absolute;
+            height: 100%;
+            will-change: transform;
+            overflow: hidden;
+          }
 
           .cards {
-            position: relative;
-            height: 100%;
-            display: flex;
-            flex-flow: row nowrap;
-            justify-content: flex-start;
-            align-items: flex-start;
-            padding-left: 150px;
+            
+            @media (min-width: 992px) {
+              position: relative;
+              height: 100%;
+              display: flex;
+              flex-flow: row nowrap;
+              justify-content: flex-start;
+              align-items: flex-start;
+              padding-left: 150px;
+            }
 
             article {
 
