--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -42,11 +42,11 @@
           z-index: 10000;
           opacity: 0;
           pointer-events: none;
-          transition: all 0.65s ease;
-
+          
           &.expanded {
             opacity: 1;
             pointer-events: all;
+            transition: opacity 0.65s ease;
           }
 
           @media (min-width: 992px) {
@@ -62,6 +62,7 @@
 
             @media(min-width: 992px) {
               padding: 0 0.5em;
+
             }
 
             &.sub-menu-hover {
