books timeline + each book pages

--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -59,9 +59,9 @@ footer.footer {
         justify-content: space-between;
         margin-top: 0.5em;
 
-
         img {
           width: 45px;
+          cursor: pointer;
         }
       }
     }
