--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,6 +8,7 @@
 @import "components/buttons";
 @import "components/hamburgers";
 @import "components/modal";
+@import "components/testimonials";
 
 @import "layouts/header";
 @import "layouts/footer";
@@ -15,3 +16,4 @@
 
 @import "pages/index";
 @import "pages/books";
+@import "pages/book";
