--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -116,7 +116,8 @@ main#index {
                 }
 
                 a.btn {
-                  margin-top: 1.75em;
+                  margin-top: 1em;
+                  position: relative;
                 }
               }
             }
