--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,11 +4,13 @@
 @import "base/normalize";
 @import "base/type";
 
+@import "components/components";
 @import "components/slider";
 @import "components/buttons";
 @import "components/hamburgers";
 @import "components/modal";
 @import "components/testimonials";
+@import "components/intro";
 
 @import "layouts/header";
 @import "layouts/footer";
@@ -17,3 +19,4 @@
 @import "pages/index";
 @import "pages/books";
 @import "pages/book";
+@import "pages/about";
