update footer link

--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -72,8 +72,16 @@ footer.footer {
       h5 {
         text-decoration: underline;
 
+        &:hover {
+          text-decoration-color: $tertiary;
+        }
+
         a {
           color: $secondary;
+
+          &:hover {
+            color: $tertiary;
+          }
         }
       }
 
