fine tune index spacing

--- a/src/scss/base/_type.scss
+++ b/src/scss/base/_type.scss
@@ -30,12 +30,12 @@ $mod_2: 1.55; // desktop
 
 h1, .h1 {  
   font-size: $mod_1*$mod_1*$mod_1*$mod_1 *1rem; 
-  @include fluid-type($min_width, $max_width, $mod_1*$mod_1*$mod_1*$mod_1 *$min_font, $mod_2*$mod_2*$mod_2*$mod_2 *$min_font);
+  @include fluid-type($min_width, $max_width, $mod_1*$mod_1*$mod_1*$mod_1 *$min_font, $mod_2*$mod_2*$mod_2*$mod_2/1.2 *$min_font);
 }
 
 h2, .h2 {  
   font-size: $mod_1*$mod_1*$mod_1 *1rem; 
-  @include fluid-type($min_width, $max_width, $mod_1*$mod_1*$mod_1 *$min_font, $mod_2*$mod_2*$mod_2 *$min_font);
+  @include fluid-type($min_width, $max_width, $mod_1*$mod_1*$mod_1 *$min_font, $mod_2*$mod_2*$mod_2/1.2 *$min_font);
 }
 
 h3, .h3 { 
