--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -24,6 +24,7 @@ $themeColor: $secondary;
 
   @media (min-width: 992px) {
     max-width: 800px;
+    padding: 4em 2em;
   }
 
   .swiper-button-next:hover,
