--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -48,6 +48,7 @@ main#index {
       @media (min-width: 992px) {
         position: relative;
         width: 100%;
+        max-width: 100%;
         min-height: 100vh;
       }
 
@@ -65,6 +66,7 @@ main#index {
             top: 0;
             height: 100vh;
             width: 100%;
+            overflow-x: hidden;
           }
 
           .scroll-stage {
@@ -74,30 +76,41 @@ main#index {
               height: 100%;
               will-change: transform;
               overflow: hidden;
+              display: flex;
+              align-items: center;
+              overflow-x: hidden;
             }
 
             .cards {
               
               @media (min-width: 992px) {
                 position: relative;
-                height: 100%;
+                margin-top: 0;
+                height: auto;
                 display: flex;
                 flex-flow: row nowrap;
                 justify-content: flex-start;
                 align-items: flex-start;
-                padding-left: 150px;
-                // margin-top: 150px;
+
+                @media (min-width: 992px) {
+                  padding-left: calc((100vw - 850px) / 2);
+                }
+
+                @media (min-width: 1200px) {
+                  padding-left: calc((100vw - 1050px) / 2);
+                }
               }
 
               article {
                 margin: 0 auto;
 
                 @media (min-width: 992px) {
-                  height: 100px;
-                  width: 900px;
-                  // margin-right: 75px;
+                  width: 750px;
                   flex-shrink: 0;
                   position: relative;
+                  display: flex;
+                  align-items: center;
+                  justify-content: space-between;
                 }
 
                 &:not(:last-of-type) {
@@ -105,6 +118,7 @@ main#index {
 
                   @media (min-width: 992px) {
                     margin-bottom: 0;
+                    margin-right: 225px;
                   }
                 }
 
@@ -114,9 +128,10 @@ main#index {
                     width: 45%;
                     max-width: 270px;
 
-                    // @media (min-width: 600px) {
-                    //   max-width: 250px;
-                    // }
+                    @media (min-width: 992px) {
+                      width: 100%;
+                      max-width: 250px;
+                    }
                   }
 
                   figcaption {
@@ -124,26 +139,33 @@ main#index {
                   }
                 }
 
-                h4 {
-                  margin: 1em 0;
-                }
-
-                p {
-                  text-align: left;
-                  margin: 0 auto;
-                  line-height: 1.6;
-                  width: 90%;
-                  max-width: 400px;
+                .wrap {
 
                   @media (min-width: 992px) {
-                    max-width: 450px;
-                    text-align: center;
+                    margin-left: 50px;
                   }
-                }
 
-                a.btn {
-                  margin-top: 1em;
-                  position: relative;
+                  h4 {
+                    margin: 1em 0;
+                  }
+
+                  p {
+                    text-align: left;
+                    margin: 0 auto;
+                    line-height: 1.6;
+                    width: 90%;
+                    max-width: 400px;
+
+                    @media (min-width: 992px) {
+                      max-width: 450px;
+                      text-align: center;
+                    }
+                  }
+
+                  a.btn {
+                    margin-top: 1em;
+                    position: relative;
+                  }
                 }
               }
             }
