--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -11,7 +11,6 @@ span.underline {
 .return {
   padding: 15px;
   background-color: #160079;
-  
   border-radius: 5px;
   z-index: 200;
   position: fixed;
@@ -22,6 +21,7 @@ span.underline {
     color: #ffd700;
     display: flex;
     align-items: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 
     svg {
       margin-right: 8px;
