changed color of back component

--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -10,7 +10,7 @@ span.underline {
 
 .return {
   padding: 15px;
-  background-color: #160079;
+  background-color: #2D3033;
   border-radius: 5px;
   z-index: 200;
   position: fixed;
@@ -18,7 +18,7 @@ span.underline {
   left: 10px;
 
   a {
-    color: #ffd700;
+    color: #18A0FB;
     display: flex;
     align-items: center;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
