--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -2,7 +2,7 @@
 
   .intro {
     margin-top: 2em;
-    
+
     @media(min-width: 600px) {
       margin-top: 4.5em;
     }
@@ -40,16 +40,16 @@
 
           }
         }
-      }      
+      }
     }
   }
 
   .content {
-    
+
     @media (min-width: 768px) {
       margin-top: 7em;
     }
-    
+
     .container {
       max-width: 600px;
 
@@ -82,31 +82,32 @@
       .grid {
         display: grid;
         grid-gap: 20px;
+        min-height: 590px;
 
         @media (min-width: 480px) {
           grid-template-columns: repeat(2, 1fr);
           grid-template-rows: repeat(2, 1fr);
         }
-        
+
         img {
           width: 100%;
           height: 100%;
           object-fit: cover;
-          
+
           @media (min-width: 480px) {
 
             &:nth-child(1) {
-              
+
             }
-            
+
             &:nth-child(2) {
               grid-row-start: 1;
               grid-row-end: 3;
               grid-column-start: 2;
             }
-            
+
             &:nth-child(3) {
-              
+
             }
           }
         }
@@ -120,26 +121,26 @@
           grid-template-columns: repeat(2, 1fr);
 
         }
-        
+
         img {
           width: 100%;
           height: 100%;
           object-fit: cover;
-          
+
           &:not(:first-of-type) {
             margin-top: 2.5em;
-            
+
             @media (min-width: 480px) {
               margin-top: 0;
 
               &:nth-child(1) {
-                  
+
               }
-              
+
               &:nth-child(2) {
-      
+
               }
-              
+
               &:nth-child(3) {
                 grid-column-end: span 2;
                 height: 350px;
