--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -44,19 +44,28 @@ main#index {
             }
 
             .cards {
-                width: 500%;
-                height: 100%;
                 display: flex;
-                flex-wrap: nowrap;
+                flex-direction: column;
+
+                @media (min-width: 992px) {
+                    width: 500%;
+                    height: 100%;
+                    flex-direction: row;
+                    flex-wrap: nowrap;
+                }
 
                 .card {
                     width: 100%;
-                    height: 100vh;
                     display: flex;
+                    flex-direction: column;
                     align-items: center;
+                    margin-bottom: 80px;
 
                     @media (min-width: 992px) {
+                        flex-direction: row;
+                        height: 100vh;
                         padding: 0 calc((100vw - 850px) / 2);
+                        margin-bottom: 0;
                     }
 
                     @media (min-width: 1200px) {
@@ -70,14 +79,23 @@ main#index {
                     &__img {
                         width: 25vw;
                         max-width: 250px;
-                        margin-right: 10vw;
+                        margin-bottom: 30px;
+
+                        @media (min-width: 992px) {
+                            margin-right: 10vw;
+                            margin-bottom: 0;
+                        }
                     }
 
                     .wrap {
-                        max-width: 50vw;
+
+                        @media (min-width: 992px) {
+                            max-width: 50vw;
+                        }
 
                         p {
                             margin: 1.5rem 0;
+                            max-width: 600px;
                         }
                     }
                 }
