--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -82,19 +82,20 @@
       .grid {
         display: grid;
         grid-gap: 20px;
-        max-height: 590px;
 
         @media (min-width: 480px) {
+          max-height: 590px;
           grid-template-columns: repeat(2, 1fr);
           grid-template-rows: repeat(2, 300px);
         }
 
         img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
+
 
           @media (min-width: 480px) {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
 
             &:nth-child(1) {
 
@@ -123,9 +124,12 @@
         }
 
         img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
+
+          @media (min-width: 480px) {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
 
           &:not(:first-of-type) {
             margin-top: 2.5em;
