--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -11,6 +11,10 @@ main#index {
 
             .btn-wrap {
                 margin-top: 1.6em;
+
+                a {
+                    cursor: pointer;
+                }
             }
         }
     }
