--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -108,7 +108,6 @@
                   padding: 1em;
                   opacity: 0;
                   pointer-events: all;
-                  transition: all 0.5s ease;
 
                   li {
                     padding-left: 0;
@@ -174,7 +173,7 @@
           ul.sub-menu {
             max-height: 0;
             overflow: hidden;
-            transition: all 1.5s ease;
+            // transition: all 1.5s ease;
             // z-index: 99;
 
             li {
