added active classes to links and modal

--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -151,7 +151,11 @@
               color: $secondary;
 
               &:hover {
-                color: $tertiary;
+                color: lighten($tertiary, 25%);
+              }
+
+              &.active {
+                  color: $tertiary;
               }
             }
 
